examples/kju/negative/lambdas/wrong_type_unapply.kju

fun f() : Unit {
}

fun kju() : Unit {
    var lambda : () -> Int = unapply(f);
}